Updated Verison and Changed the name to LoveLit

--- a/BookLoggerApp/Components/Pages/BookDetail.razor
+++ b/BookLoggerApp/Components/Pages/BookDetail.razor
@@ -8,7 +8,7 @@
 @inject IImageService ImageService
 @inject Microsoft.AspNetCore.Components.NavigationManager Navigation
 
-<PageTitle>@(ViewModel.Book?.Title ?? "Book Details") - BookLogger</PageTitle>
+<PageTitle>@(ViewModel.Book?.Title ?? "Book Details") - LoveLit</PageTitle>
 
 <div class="book-detail-container">
     @if (ViewModel.IsBusy)
