--- a/BookLoggerApp/Components/Pages/BookEdit.razor
+++ b/BookLoggerApp/Components/Pages/BookEdit.razor
@@ -8,7 +8,7 @@
 @inject Microsoft.AspNetCore.Components.NavigationManager Navigation
 @inject IImageService ImageService
 
-<PageTitle>@(ViewModel.Book?.Id == Guid.Empty ? "Add Book" : "Edit Book") - BookLogger</PageTitle>
+<PageTitle>@(ViewModel.Book?.Id == Guid.Empty ? "Add Book" : "Edit Book") - LoveLit</PageTitle>
 
 <div class="book-edit-container">
     <div class="book-edit-header">
