--- a/BookLoggerApp/Components/Pages/Bookshelf.razor
+++ b/BookLoggerApp/Components/Pages/Bookshelf.razor
@@ -11,7 +11,7 @@
 @inject BookLoggerApp.Core.Services.Abstractions.IBackButtonService BackButtonService
 @implements IDisposable
 
-<PageTitle>Bookshelf - BookLogger</PageTitle>
+<PageTitle>Bookshelf - LoveLit</PageTitle>
 
 <div class="bookshelf-container">
     <!-- Reading Goal Header -->
