--- a/BookLoggerApp/Components/Pages/Goals.razor
+++ b/BookLoggerApp/Components/Pages/Goals.razor
@@ -8,7 +8,7 @@
 @inject BookLoggerApp.Core.Services.Abstractions.IBackButtonService BackButtonService
 @implements IDisposable
 
-<PageTitle>Goals - BookLogger</PageTitle>
+<PageTitle>Goals - LoveLit</PageTitle>
 
 <div class="goals-container">
     <div class="goals-header">
