--- a/BookLoggerApp/Components/Pages/Settings.razor
+++ b/BookLoggerApp/Components/Pages/Settings.razor
@@ -3,7 +3,7 @@
 @inject SettingsViewModel ViewModel
 @inject BookLoggerApp.Core.Services.Abstractions.IBackButtonService BackButtonService
 
-<PageTitle>Settings - BookLogger</PageTitle>
+<PageTitle>Settings - LoveLit</PageTitle>
 
 <div class="settings-container">
     <h1 class="settings-title">Settings</h1>
@@ -22,7 +22,7 @@
         <section class="settings-section">
             <h2>About</h2>
             <div class="about-info">
-                <p class="app-name">Book Logger</p>
+                <p class="app-name">LoveLit</p>
                 <p class="app-version">Version @ViewModel.AppVersion</p>
             </div>
         </section>
