--- a/BookLoggerApp/Components/Pages/Dashboard.razor
+++ b/BookLoggerApp/Components/Pages/Dashboard.razor
@@ -8,7 +8,7 @@
 @inject IImageService ImageService
 @implements IDisposable
 
-<PageTitle>Dashboard - BookLogger</PageTitle>
+<PageTitle>Dashboard - LoveLit</PageTitle>
 
 <div class="dashboard-container">
     @if (ViewModel.IsBusy)
