--- a/BookLoggerApp/Components/Pages/Reading.razor
+++ b/BookLoggerApp/Components/Pages/Reading.razor
@@ -6,7 +6,7 @@
 @inject Microsoft.AspNetCore.Components.NavigationManager Navigation
 @implements IDisposable
 
-<PageTitle>Reading - BookLogger</PageTitle>
+<PageTitle>Reading - LoveLit</PageTitle>
 
 <div class="reading-container">
     @if (ViewModel.IsBusy)
