deactivatet Gemini Workflows

--- a/BookLoggerApp/Components/Pages/BookEdit.razor
+++ b/BookLoggerApp/Components/Pages/BookEdit.razor
@@ -472,6 +472,7 @@
         if (ViewModel.Book != null)
         {
             ViewModel.Book.SpineColor = color;
+            ViewModel.Book.UsesCoverAsSpine = false;
         }
     }
 
