--- a/BookLoggerApp/Components/Pages/BookEdit.razor
+++ b/BookLoggerApp/Components/Pages/BookEdit.razor
@@ -235,6 +235,7 @@
                                     <span class="spine-mode-icon">🎨</span>
                                     <span class="custom-text">Custom</span>
                                     <input type="color" 
+                                           style="position: absolute; opacity: 0; width: 100%; height: 100%; top: 0; left: 0; padding: 0; margin: 0; border: none; cursor: pointer;"
                                            value="@GetCustomColorValue()" 
                                            @onchange="@(e => SetCustomSpineColor(e.Value?.ToString()))" />
                                 </label>
